# resumeAssistant

./: .gitignore  README.md  pyproject.toml
src/resume_assistant/: __init__.py  generator.py  models.py  optimizer.py  parser.py  server.py  storage.py
src/resume_assistant/templates/: classic.html  executive.html  modern.html
